--- a/index.html
+++ b/index.html
@@ -1,20 +1,81 @@
 <!doctype html>
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tà Xùa - Khám Phá Vẻ Đẹp Núi Rừng Tây Bắc</title>
     <meta name="description" content="Khám phá vẻ đẹp hùng vĩ của Tà Xùa, Sơn La với những trải nghiệm độc đáo về văn hóa H'Mông, chè Shan Tuyết cổ thụ và biển mây bạt ngàn." />
-    <meta name="author" content="Tà Xùa" />
+    <meta name="keywords" content="Tà Xùa, Sơn La, du lịch, núi rừng, H'Mông, chè Shan Tuyết, biển mây, Tây Bắc, eco-tourism" />
+    <meta name="author" content="Tà Xùa Tourism" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="Vietnamese" />
+    <meta name="geo.region" content="VN-05" />
+    <meta name="geo.placename" content="Tà Xùa, Sơn La, Vietnam" />
+    <meta name="geo.position" content="21.3333;103.8333" />
+    <meta name="ICBM" content="21.3333, 103.8333" />
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://taxua.com/" />
     <meta property="og:title" content="Tà Xùa - Khám Phá Vẻ Đẹp Núi Rừng Tây Bắc" />
     <meta property="og:description" content="Khám phá vẻ đẹp hùng vĩ của Tà Xùa, Sơn La với những trải nghiệm độc đáo về văn hóa H'Mông, chè Shan Tuyết cổ thụ và biển mây bạt ngàn." />
-    <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="vi_VN" />
+    <meta property="og:site_name" content="Tà Xùa Tourism" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:url" content="https://taxua.com/" />
+    <meta name="twitter:title" content="Tà Xùa - Khám Phá Vẻ Đẹp Núi Rừng Tây Bắc" />
+    <meta name="twitter:description" content="Khám phá vẻ đẹp hùng vĩ của Tà Xùa, Sơn La với những trải nghiệm độc đáo về văn hóa H'Mông, chè Shan Tuyết cổ thụ và biển mây bạt ngàn." />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://taxua.com/" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Preconnect to external domains -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://api.openweathermap.org" />
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "TouristDestination",
+      "name": "Tà Xùa",
+      "description": "Khám phá vẻ đẹp hùng vĩ của Tà Xùa, Sơn La với những trải nghiệm độc đáo về văn hóa H'Mông, chè Shan Tuyết cổ thụ và biển mây bạt ngàn.",
+      "url": "https://taxua.com/",
+      "image": "https://lovable.dev/opengraph-image-p98pqg.png",
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 21.3333,
+        "longitude": 103.8333
+      },
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Tà Xùa",
+        "addressRegion": "Sơn La",
+        "addressCountry": "VN"
+      },
+      "touristType": ["Eco-tourism", "Cultural tourism", "Adventure tourism"],
+      "availableLanguage": ["vi", "en"],
+      "isAccessibleForFree": true,
+      "publicAccess": true
+    }
+    </script>
+
+    <!-- Performance optimizations -->
+    <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="//api.openweathermap.org" />
+    <link rel="dns-prefetch" href="//phechat.com" />
   </head>
 
   <body>
